# Smart-Travel-Assistant

更新版本1.0/agent-fastapi/: .env  .gitignore  database.py  debug_scenario.py  jwt_create.py  main.py  model_prompt.py  pyproject.toml  pyrightconfig.json  state_graph.py  tool.py  tool_list.py
更新版本1.0/agent-fastapi/.github/: copilot-instructions.md
更新版本1.0/agent-fastapi/.github/skills/checkpoint/: SKILL.md
更新版本1.0/agent-fastapi/.github/skills/dev-workflow/: SKILL.md
更新版本1.0/agent-fastapi/.github/skills/implement/: SKILL.md
更新版本1.0/agent-fastapi/agents/: __init__.py  chat_agent.py  map_route_agent.py  plan_writer_agent.py  preference.py  research_agent.py  supervisor.py  transport_agent.py
更新版本1.0/agent-fastapi/controllers/: chat.py  user.py  voice.py
更新版本1.0/agent-fastapi/core/: middleware.py  response.py
更新版本1.0/agent-fastapi/docs/: MULTI_AGENT_ARCHITECTURE.md
更新版本1.0/agent-fastapi/graph/: __init__.py  builder.py  state.py  tool_groups.py
更新版本1.0/agent-fastapi/models/: conversations_list.py  user.py
更新版本1.0/agent-fastapi/prompts/: map_route.txt  plan_writer.txt  research.txt  supervisor.txt  transport.txt
更新版本1.0/agent-fastapi/schemas/: chat.py  user.py
更新版本1.0/agent-fastapi/services/: chat.py
更新版本1.0/agent-fastapi/tests/: conftest.py
更新版本1.0/agent-fastapi/tests/e2e/: test_full_flows.py
更新版本1.0/agent-fastapi/tests/integration/: conftest.py  test_graph_topology.py  test_helpers.py  test_route_and_done_nodes.py
更新版本1.0/agent-fastapi/tests/unit/: test_preference.py  test_schema.py  test_supervisor.py  test_tool_groups.py  test_transport.py
(+37 files in other folders)
